code cleanup
switched  Stream#collect(Collectors.toList()) to Stream#toList()
added @UtilityClass Annotations were possible
added computeIfAbsent to a call on a map, instead of get, nullcheck and put
used instanceof cast were possible
removed keywords which are added by the compiler
switched !optional.isPresent() to optional.isEmpty

and some more minor changes
and some general code cleanup